--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-Hello world!
-
-
-------------------------------
-http://calum-hughes.github.io
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Calum Hughes</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Calum Hughes</h1>
+				<p>PhD student studying model category theory at the University of Manchester. <a href="/about">Read more about my PhD</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:calum.hughes77@gmail.com">email</a></li>
+        		<li><a href="https://github.com/calum-hughes">github.com/calum-hughes</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
