--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Calum Hughes</title>
-		
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Calum Hughes</h1>
-				<p>PhD student studying model category theory at the University of Manchester. <a href="/about">Read more about my PhD</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:calum.hughes77@gmail.com">email</a></li>
-        		<li><a href="https://github.com/calum-hughes">github.com/calum-hughes</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Calum Hughes
+---
+<div class="blurb">
+	<h1>Calum Hughes</h1>
+	<p>PhD student studying model category theory at the University of Manchester. <a href="/about">Read more about my PhD</a></p>
+</div><!-- /.blurb -->
